content/consul/v1.9.x/content/commands/snapshot/inspect.mdx
---
# Copyright (c) 2024 HashiCorp, Inc.
# Consul and the Consul logo are trademarks of HashiCorp.
#
# Documentation licensed under the Business Source License, Version 1.1.
# The original work was translated from English into Brazilian Portuguese.
# https://github.com/hashicorp/consul/blob/-/LICENSE

layout: commands
page_title: 'Commands: Snapshot Inspect'
---

# Consul Snapshot Inspect

Command: `consul snapshot inspect`

The `snapshot inspect` command is used to inspect an atomic, point-in-time
snapshot of the state of the Consul servers which includes key/value entries,
service catalog, prepared queries, sessions, and ACLs. The snapshot is read
from the given file.

The following fields are displayed when inspecting a snapshot:

- `ID` - A unique ID for the snapshot, only used for differentiation purposes.

- `Size` - The size of the snapshot, in bytes.

- `Index` - The Raft index of the latest log entry in the snapshot.

- `Term` - The Raft term of the latest log entry in the snapshot.

- `Version` - The snapshot format version. This only refers to the structure of
  the snapshot, not the data contained within.

## Usage

Usage: `consul snapshot inspect [options] FILE`

## Examples

To inspect a snapshot from the file "backup.snap":

```shell-session
$ consul snapshot inspect backup.snap
ID           2-5-1477944140022
Size         667
Index        5
Term         2
Version      1

 Type                        Count      Size
 ----                        ----       ----
 Register                    3          1.7KB
 ConnectCA                   1          1.2KB
 ConnectCAProviderState      1          1.1KB
 Index                       12         344B
 AutopilotRequest            1          199B
 ConnectCAConfig             1          197B
 FederationState             1          139B
 SystemMetadata              1          68B
 ChunkingState               1          12B
 ----                        ----       ----
 Total                                   5KB
```

Please see the [HTTP API](/api/snapshot) documentation for
more details about snapshot internals.
